[package]
name = "ztm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
gtfs-structures = "0.41.3"
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
